<!-- fragment_input.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:orientation="vertical"
   tools:context=".InputFragment">

   <EditText
      android:id="@+id/editTextNumber1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:hint="@string/angka_pertama"
      android:minHeight="48dp"
      android:textColorHint="#8D6E63" />

   <EditText
      android:id="@+id/editTextNumber2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:hint="@string/angka_kedua"
      android:minHeight="48dp"
      android:textColorHint="#8D6E63"
      tools:ignore="TextFields" />


   <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:orientation="horizontal">

      <Button
         android:id="@+id/addButton"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
         android:text="@string/tambah"
         android:layout_marginEnd="8dp"
         style="?android:attr/buttonBarButtonStyle" />

      <Button
         android:id="@+id/subtractButton"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
         android:text="@string/minus"
         android:layout_marginEnd="8dp"
         style="?android:attr/buttonBarButtonStyle" />

      <Button
         android:id="@+id/multiplyButton"
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
         android:text="@string/kali"
         style="?android:attr/buttonBarButtonStyle" />
   </LinearLayout>

   <Button
      android:id="@+id/calculateButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/hitung"
      android:layout_marginTop="16dp" />
   <FrameLayout
      android:id="@+id/fragment_container"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_below="@id/tabLayout" />
</LinearLayout>
